--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -2,7 +2,7 @@
 
 .landingpage {
   max-width: 800px;
-  margin: auto;
+  margin: 2em auto;
   font-size: 1.4em;
   line-height: 1.5em;
   text-align: center;
